--- a/css/style.css
+++ b/css/style.css
@@ -7,7 +7,7 @@ div#footer {
     padding-top: 50px;
     margin-right: 0px;
     text-align: center;
-    background-color: #cce6d1;
+    background-color: #c3cfe6;
     padding-bottom: 50px;
     border-top: 1px solid grey; 
 }
